@@ -4,9 +4,16 @@ Changes for the 5th ORE release (1.8.5.0):
 Update almost all interface files to work with QuantLib-SWIG 1.18
 and to use the SWIG wrapper of boost::shared_ptr.
 
+
 Changes for the 6th ORE release (1.8.6.0):
 ==========================================
 
 Updates to work with QuantLib-SWIG 1.22
 
 
+Changes for the 6th ORE release (1.8.7.0):
+==========================================
+
+Updates to work with QuantLib-SWIG 1.27
+Pythgon test cases fixed, thanks to Farah Khashman
+Various additional ORE classes wrapped, thanks to Farah Khashman 
